<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">City</string>
    <string name="weather_desc">Description</string>
    <string name="min_max_temp">Min. Max.</string>
    <string name="current_temp" translatable="false">0°</string>
    <string name="search_bar">Search for a city</string>
    <string name="weather_title">Weather</string>
    <string name="feels_like">Feels like</string>
    <string name="time" translatable="false">00.00</string>
    <string name="forecast">7 days forecast</string>
    <string name="date" translatable="false">00/00</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="direction">Direction</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="north">N</string>
    <string name="south">S</string>
    <string name="east">E</string>
    <string name="west">W</string>
</resources>